--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "GoogleCloudSpeechPlayground",
-  "version": "1.0.1",
-  "description": "Google Cloud Speech Playground with node.js and socket.io.",
+  "name": "google-live-speech-translation",
+  "version": "1.0.0",
+  "description": "Live translate Speech with Google Cloud.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/media-translation": "^2.2.2",
-    "@google-cloud/speech": "^3.6.0",
     "@google-cloud/text-to-speech": "^3.1.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
